# cbsync

./: README.md  cbsync.code-workspace  mypy.ini  pyproject.toml  ruff.toml  start-cbsync.bat  start-cbsync.ps1  start-cbsync.sh  start-clipboard-sync.bat  start-clipboard-sync.ps1  start-clipboard-sync.sh  stop-cbsync.ps1  stop-cbsync.sh  stop-clipboard-sync.ps1  stop-clipboard-sync.sh
src/cbsync/: cbsync.py  cbsync_manager.py  clipboard_backend.py  clipboard_data.py  clipboard_monitor.py  clipboard_server.py  main.py  net_utils.py  peer_discovery.py  sync_state.py
src/clipboard_sync/: clipboard_sync.py
tests/: test_clipboard_sync_reliability.py
