[project]
name = "cbsync"
version = "0.2.0"
description = "Clipboard sync between devices"
authors = [
    {name = "Danny Stewart",email = "danny@stewart.cc"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "polykit (>=0.14.0,<0.15.0)",
    "pyperclip (>=1.9.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]

[project.optional-dependencies]
enhanced-network = ["netifaces (>=0.11.0,<1.0.0)"]

[tool.poetry.group.enhanced-network.dependencies]
netifaces = "^0.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
cbsync = "cbsync.main:main"
cbsman = "cbsync.cbsync_manager:main"
