[project]
name = "cbsync"
version = "0.5.4"
description = "Clipboard sync between devices"
authors = [
    {name = "Danny Stewart",email = "danny@stewart.cc"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "polykit (>=0.14.6,<0.15.0)",
    "pyperclip (>=1.11.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "pyobjc-framework-cocoa (>=12.1,<13.0) ; platform_system == \"Darwin\"",
    "pywin32 (>=311,<312) ; platform_system == \"Windows\"",
]

[project.optional-dependencies]
enhanced-network = ["netifaces (>=0.11.0,<0.12.0)"]

[tool.poetry.group.enhanced-network.dependencies]
netifaces = "^0.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.4"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
cbsync = "cbsync.main:main"
cbsman = "cbsync.cbsync_manager:main"
